# CancerFoundation

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  TODO.md  bionemo.toml  bionemo_bristen.toml  bionemo_clariden.toml  check_bionemo.py  check_bionemo.sh  check_data.sh  config.yaml  data_processing.ipynb  debug.sh  debug_memmap_scan.py  diagnose_genesets.py  embed.ipynb  encode.ipynb  environment.yml  examples.pkl  finetune_brain_cancer.txt  flash_attention_debug.ipynb  inspect_binning.py  inspect_data.ipynb  pip_packages.txt  plot_binning_comparison.py  plot_sweep_comparison.py  plot_throughput.py  plot_tissue_distribution.py  plot_training_loss.py  preprocess.ipynb  pretrain.py  pretrain.sh  pyproject.toml  requirements.txt  run_debug_docker.sh  submit.sh  (+5 more)
.claude/: settings.local.json
.devcontainer/: bionemo.Dockerfile  devcontainer.env  devcontainer.json
cancerfoundation/: __init__.py  callbacks.py  data_collator.py  data_sampler.py  dataset.py  dataset_bm.py  gene_tokenizer.py  loss.py  preprocess.py  trainer.py  utils.py
dataset_pretraining/: mapping.json
drug_response_prediction/: README.md  drp.py  environment.yml  model.py  plot.ipynb  run_all.sh
gene_perturbation/: Tutorial_Perturbation.ipynb  run_perturbation.py  run_perturbation_mine.py
model/: __init__.py  cancergpt.py  data_collator.py  dataset.py  embedding.py  utils.py  vocab.py
scripts/: h5ads_to_sc.py
submits/: build_brain_dataset.sh  build_brain_dataset_eval.sh  build_brain_dataset_train.sh  build_medium_dataset_eval.sh  cell.sh  scgpt.sh  (+69 more)
(+135 files in other folders)
